--- a/reportMaster2/4-Eval.tex
+++ b/reportMaster2/4-Eval.tex
@@ -131,7 +131,7 @@ Mistral & $2$ & $10$ & Ivy-Bridge Xeon E5-2670v2 @2.50 GHz \\% & $25$ MB & $256$
 
 Par ailleurs les compilateurs utilisés sur ces machines sont \textsf{g++ 4.9.2} pour \textsf{Manmanu} et \textsf{Mistral}, et \textsf{g++ 4.9.0} pour \textsf{Fourmi}. Ils utilisent tous la version associée d'\textsf{OpenMP}, ainsi que \textsf{boost 1.58} (pour \textsf{triSYCL}).
 
-Ces machines n'ayant pas les mêmes caractéristiques, les optimisations à réaliser et tester ne sont pas les mêmes. L'optimisation des caches a notamment été évoquée à la section \ref{sec:obj_perf} : il s'agit de faire rentrer la mémoire utilisée par le calcul d'une macro-tuile dans le cache L3, et la mémoire utilisée par un élément dans le cache L2. La solution optimale à ses deux problèmes peut être calculée de manière exacte par la résolution de deux équations du second degré. En effet notons $x$ la taille d'une tuile et $y$ la taille d'une macro-tuile (carrée), ainsi que $a$ la taille du cache L2, et $b$ la taille du cache L3. Dans le cas de problème de Jacobi à deux dimensions, la mémoire utilisée par un cœur correspond d'après les implantations utilisées à $7$ tuiles ainsi que la matrice de coefficients. En ce qui concerne l'ensemble des cœurss, au nombre de $c$ qui partagent le même cache L3 (même banc NUMA), ils stockent la matrice de coefficients ainsi que $7 \times c$ tuiles (les caches L3 sont inclusifs) et une macro-tuile entière. Il est donc possible de calculer la taille optimale d'une tuile pour le cache L1 puis d'utiliser cette taille pour calculer la taille optimale d'une macro-tuile pour le cache L3. Enfin précisons que les calculs sont effectués avec le type \textsf{float} qui utilisent $4$ Bytes. Ainsi nous obtenons l'équation \ref{eq:cache_L2} pour le cache L2 et \ref{eq:cache_L3} pour le cache L3.
+Ces machines n'ayant pas les mêmes caractéristiques, les optimisations à réaliser et tester ne sont pas les mêmes. L'optimisation des caches a notamment été évoquée à la section \ref{sec:obj_perf} : il s'agit de faire rentrer la mémoire utilisée par le calcul d'une macro-tuile dans le cache L3. Par ailleurs nous souhaiterions que la mémoire utilisée par un seul élément puisse être contenue par le cache L2. La solution optimale à ses deux problèmes peut être calculée de manière exacte par la résolution de deux équations du second degré. En effet notons $x$ la taille d'une tuile et $y$ la taille d'une macro-tuile (carrée), ainsi que $a$ la taille du cache L2, et $b$ la taille du cache L3. Dans le cas de problème de Jacobi à deux dimensions, la mémoire utilisée par un cœur correspond d'après les implantations utilisées à $7$ tuiles ainsi que la matrice de coefficients. En ce qui concerne l'ensemble des cœurss, au nombre de $c$ qui partagent le même cache L3 (même banc NUMA), ils stockent la matrice de coefficients ainsi que $7 \times c$ tuiles (les caches L3 sont inclusifs) et une macro-tuile entière. Il est donc possible de calculer la taille optimale d'une tuile pour le cache L1 puis d'utiliser cette taille pour calculer la taille optimale d'une macro-tuile pour le cache L3. Enfin précisons que les calculs sont effectués avec le type \textsf{float} qui utilisent $4$ Bytes. Ainsi nous obtenons l'équation \ref{eq:cache_L2} pour le cache L2 et \ref{eq:cache_L3} pour le cache L3.
 
 \begin{equation}
 \label{eq:cache_L2}
@@ -191,12 +191,12 @@ D'ailleurs les tailles de tuiles ont été déterminées en fonction de la taill
 
 Les résultats des compteurs de cache-miss renforcent ainsi l'idée que l'optimisation de la mémoire au sein du cache L2 est très importante pour obtenir des performances. De plus ces résultats expliquent partiellement pourquoi la taille des macro-tuile n'avait pas d'influence sur le temps d'exécution : en effet les cache-miss au niveau L3 (en rose et rouge dans la figure \ref{graph:comp_tuile_cmiss}, non visibles) sont très peu nombreux (de l'ordre de $1\%$ par rapport au L2) qu'elle qu'en soit la taille donc ne modifient pas le temps d'exécution.
 
-Ces résultats sont révélateurs de la complexité des possibilités d'optimisation du DSEL car alors que la taille des macro-tuiles est contrôlable par le DSEL, la taille des tuiles (qui simule la charge de calcul d'une tâche) est gérée par l'utilisateur. Le paradigme utilisé par le DSEL pour le tuilage qui est d'exécuter chaque tâche sur un cœur (une tâche étant l'application d'un stencil sur un élément) n'est donc peut-être pas le plus adapté : il est nécessaire non seulement de gérer la taille des macro-tuiles (car elles peuvent certainement avoir une influence sur d'autres types de problèmes que Jacobi) mais aussi la charge de calcul d'une tâche en les subdivisant ou au contraire en les regroupant, ce qui est difficile à prévoir.
+Ces résultats sont révélateurs de la complexité des possibilités d'optimisation du DSEL car alors que la taille des macro-tuiles est contrôlable par le DSEL, la taille des tuiles (qui simule la charge de calcul d'une tâche) est gérée par l'utilisateur. Le paradigme utilisé par le DSEL pour le tuilage qui est d'exécuter chaque tâche sur un cœur (une tâche étant l'application d'un stencil sur un élément) n'est donc peut-être pas le plus adapté : il est nécessaire non seulement de gérer la taille des macro-tuiles (car elles peuvent certainement avoir une influence sur d'autres types de problèmes que Jacobi) mais aussi la charge de calcul d'une tâche en les subdivisant ou au contraire en les regroupant, ce qui est difficile à prévoir. Les objectifs de performances évoqués à la section \ref{sec:obj_perf} ne doivent alors pas seulement s'appuyer sur les caractéristiques du L3 mais aussi sur celles du L2 (lorsqu'il s'agit de processeurs centraux).
 
 
 \subsubsection*{Comparaison des implantations et liens avec le matériel}
 
-Selon la nature du matériel, différentes implantations et méthodes de parallélisation sont adaptée, notamment suivant le nombre de bancs NUMA. Les deux graphiques suivants ont été tracés pour le même cas de Jacobi a priori optimal pour la machine \textsf{Mistral} : $M128-T128$. La figure \ref{graph_comp_temps_mistral10core} regroupe les résultats de plusieurs implantations différentes exécutées sur un seul banc NUMA. La version séquentielle est celle qui nécessite le plus de temps avec la version de parallélisation hiérarchique par banc inadaptée sur un unique banc. Les deux versions de base, avec parallélisation naïve sont les deux implantations les plus performantes et atteignent une accélération de $9.8$, donc presque $10$ fois plus rapide que la version séquentielle soit le pic théorique de performance puisque le banc NUMA dispose de $10$ cœurs. En revanche les versions par tuilage (les trois plus à droite sur la figure \ref{graph_comp_temps_mistral10core}) sont deux fois plus lentes que les versions de parallélisées naïvement et atteignent une accélération de $4.4$ seulement. Toutefois notons que le coût du calcul du stencil (en rouge sur le graphique) est quant à lui similaire et le temps supplémentaire est donc dû au chargement des données des macro-tuile (en bleu). Ce résultat est prévisible car la parallélisation par tuilage est plutôt adaptée au processeurs graphiques qui nécessitent explicitement ce chargement en mémoire contrairement aux processeurs centraux tels que dans le cas présent où l'opération de chargement est effectuée automatiquement.
+Selon la nature du matériel, différentes implantations et méthodes de parallélisation sont adaptée, notamment suivant le nombre de bancs NUMA. Les deux graphiques suivants ont été tracés pour le même cas de Jacobi a priori optimal pour la machine \textsf{Mistral} : $M128-T128$. La figure \ref{graph:comp_temps_mistral10core} regroupe les résultats de plusieurs implantations différentes exécutées sur un seul banc NUMA. La version séquentielle est celle qui nécessite le plus de temps avec la version de parallélisation hiérarchique par banc inadaptée sur un unique banc. Les deux versions de base, avec parallélisation naïve sont les deux implantations les plus performantes et atteignent une accélération de $9.8$, donc presque $10$ fois plus rapide que la version séquentielle soit le pic théorique de performance puisque le banc NUMA dispose de $10$ cœurs. En revanche les versions par tuilage (les trois plus à droite sur la figure \ref{graph:comp_temps_mistral10core}) sont deux fois plus lentes que les versions de parallélisées naïvement et atteignent une accélération de $4.4$ seulement. Toutefois notons que le coût du calcul du stencil (en rouge sur le graphique) est quant à lui similaire et le temps supplémentaire est donc dû au chargement des données des macro-tuile (en bleu). Ce résultat est prévisible car la parallélisation par tuilage est plutôt adaptée au processeurs graphiques qui nécessitent explicitement ce chargement en mémoire contrairement aux processeurs centraux tels que dans le cas présent où l'opération de chargement est effectuée automatiquement.
 
 \begin{figure}[!h]
   \caption{Comparaison des performances suivant l'implantation sur un seul banc NUMA.}
