--- a/reportMaster2/5-Concl.tex
+++ b/reportMaster2/5-Concl.tex
@@ -13,7 +13,7 @@ D'autres choix auraient été possibles concernant la conception ainsi que l'imp
 
 Les tests effectués ont toutefois démontré que notre approche était viable tant pour l'expressivité que pour les performances offertes par le DSEL. Il s'agit donc maintenant de le compléter afin de l'intégrer dans des applications existantes telles que \textsf{QIRAL}.
 
-\section{Perspetives}
+\section{Perspectives}
 
 À court terme les évolutions pour le DSEL concernent le nombre de dimensions autorisées pour les stencils (uniquement deux actuellement), quelques éléments de syntaxes (pour la gestion de types complexes d'éléments telles que des matrices) et le choix automatique de l'implantation optimale (technique de tuilage ou non).
 
